# ParallelImageRenderer

./: CMakeLists.txt  README.md
src/: main.cpp  renderer.cpp  renderer.hpp
